2010-12-31  Oliver Hader  <oliver@typo3.org>

	* Added feature #11810: Integrate possibility to generate sprites
	* Fixed bug #5837: PHP - Function ereg_replace() is deprecated

2009-06-22  Oliver Hader  <oliver@typo3.org>

	* Added feature #3386: Integrate helpers to create autoloading registry for TYPO3 4.3 (thanks to Dmitry Dulepov, Martin Kutschker, Sebastian Kurfuerst)

2008-09-12	Dmitry Dulepov	<dmitry@typo3.org>

	* Added "static" declaration parsing to code beautifier

2008-02-19	Dmitry Dulepov	<dmitry@typo3.org>

	* Updated for latest changes in BE interfaces

2008-01-20	Steffen Kamper	<info@sk-typo3.de>

	* Toolbar integration in 4.2 BE
	
2007-11-23	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed problem with parsing public/private/protected functions
	* Fixed bug #5594: tx_extdeveval breaks on PHP 5.2.2

2005-10-24  Michael Stucki  <michael@typo3.org>

	* Removed class.ux_sc_alt_topmenu_dummy.php and replaced it with a new function that uses a new hook in TYPO3core