@@ -2,6 +2,7 @@
 
 	* Added feature #11810: Integrate possibility to generate sprites
 	* Fixed bug #5837: PHP - Function ereg_replace() is deprecated
+	* Fixed bug #6734: Creation of ext_autoload.php misses fixPermissions
 
 2009-06-22  Oliver Hader  <oliver@typo3.org>
 
